--- a/src/main/resources/templates/views/admin/login.html
+++ b/src/main/resources/templates/views/admin/login.html
@@ -65,7 +65,7 @@
 <script src="../layuiadmin/layui/layui.js" th:src="@{/layuiadmin/layui/layui.js}"></script>
 <script>
     layui.config({
-        base: '../../layuiadmin/' //静态资源所在路径
+        base: '../../static/layuiadmin/' //静态资源所在路径
     }).extend({
         index: 'lib/index' //主入口模块
     }).use(['index', 'user'], function () {
@@ -86,20 +86,12 @@
                 contentType: "application/json;charset=UTF-8",
                 success: function (result) {
                     if (result == 'success') {
-                        layer.msg('普通用户登入成功', {
+                        layer.msg('登入成功', {
                             offset: '15px'
                             , icon: 1
                             , time: 1500
                         }, function () {
                             location.href = '../'; //
-                        });
-                    } else if (result == 'adminsuccessls') {
-                        layer.msg('管理员登录成功！', {
-                            offset: '15px'
-                            , icon: 1
-                            , time: 1000
-                        }, function () {
-                            location.href = '/admin'; //
                         });
                     } else if (result == 'userNull') {
                         layer.msg('用户不存在！', {
