--- a/src/main/resources/templates/views/admin/login.html
+++ b/src/main/resources/templates/views/admin/login.html
@@ -65,7 +65,7 @@
 <script src="../layuiadmin/layui/layui.js" th:src="@{/layuiadmin/layui/layui.js}"></script>
 <script>
     layui.config({
-        base: '../../static/layuiadmin/' //静态资源所在路径
+        base: '../../layuiadmin/' //静态资源所在路径
     }).extend({
         index: 'lib/index' //主入口模块
     }).use(['index', 'user'], function () {
