--- a/src/main/resources/templates/views/admin/index.html
+++ b/src/main/resources/templates/views/admin/index.html
@@ -86,7 +86,7 @@
                             <cite>用户管理</cite>
                         </a>
                         <dl class="layui-nav-child">
-                            <dd><a lay-href="/userUi">用户列表</a></dd>
+                            <dd><a lay-href="userUi">用户列表</a></dd>
                         </dl>
                     </li>
 
