--- a/src/main/resources/templates/views/admin/notice/noticeList.html
+++ b/src/main/resources/templates/views/admin/notice/noticeList.html
@@ -212,7 +212,7 @@
                         },
                     });
                 });
-                //更新用户
+                //查看公告信息
             } else if (obj.event == 'look') {
                 layer.open({
                     type: 1,
@@ -226,7 +226,7 @@
                         $("#content1").val(data.content);
                     },
                 });
-
+            //更新用户
             } else if (obj.event == 'edit') {
                 layer.open({
                     type: 1,
