--- a/src/main/resources/templates/views/client/html/commons/bar.html
+++ b/src/main/resources/templates/views/client/html/commons/bar.html
@@ -17,8 +17,8 @@
     </h1>
     <div class="nav" style="color:#e3f6ff">
         <a style="font-size: 18px" href="/" th:href="@{/}">首页</a>
-        <a style="font-size: 18px" href="/article/list" th:href="@{/article/list}">文章</a>
-        <a style="font-size: 18px" href="/pgtestUi" th:href="@{/pgtestUi}">心理评测</a>
+        <a style="font-size: 18px" href="/article/list" th:href="@{/article/list}">相关知识</a>
+        <a style="font-size: 18px" href="/pgtestUi" th:href="@{/pgtestUi}">期末测试</a>
         <a style="font-size: 18px" href="/leacotsUi" th:href="@{/leacotsUi}">留言</a>
         <a style="font-size: 18px" href="/noticeClientUi/list" th:href="@{/noticeClientUi/list}">公告</a>
     </div>
@@ -32,25 +32,9 @@
                                                               th:href="@{/noticeClientUi/list}">公告</a></li>
     </ul>
     <p class="welcome-text">
-        <span name="name">[[${session.loginName}]]</span>欢迎来到在线心理咨询~
+        <span name="name">[[${session.loginName}]]</span>欢迎来到在线测试系统~
     </p>
 </div>
-<div class="footer-wrap" th:fragment="footer">
-    <div class="footer w1000">
-        <div class="qrcode">
-            <p style="font-size: 18px;text-align: center">使用QQ扫描二维加心理咨询师</p><br/>
-            <img src="../res/img/lianxi.jpg">
-        </div>
-        <div class="practice-mode">
-            <img src="../res/img/down_img.jpg">
-            <div class="text">
-                <h4 class="title">网站客服联系方式</h4>
-                <p>微信<span class="WeChat">pengzhen809612945</span></p>
-                <p>手机<span class="iphone">15638509405</span></p>
-                <p>邮箱<span class="email">809612945@qq.com</span></p>
-            </div>
-        </div>
-    </div>
-</div>
+
 </body>
 </html>
