--- a/src/main/resources/templates/views/client/html/index.html
+++ b/src/main/resources/templates/views/client/html/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport"
           content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=0">
-    <title>在线心理咨询服务平台</title>
+    <title>在线学生测试平台</title>
     <link rel="stylesheet" type="text/css" href="../res/layui/css/layui.css" th:href="@{/res/layui/css/layui.css}">
     <link rel="stylesheet" type="text/css" href="../res/css/main.css" th:href="@{/res/css/main.css}">
     <!--加载meta IE兼容文件-->
@@ -28,7 +28,6 @@
         </div>
     </div>
 </div>
-<div th:replace="client/html/commons/bar::footer"></div>
 <script type="text/javascript" src="../res/layui/layui.js" th:src="@{/res/layui/layui.js}"></script>
 <script type="text/javascript">
     layui.config({
