springboot基本功能完成

--- a/src/main/resources/templates/views/admin/index.html
+++ b/src/main/resources/templates/views/admin/index.html
@@ -62,10 +62,10 @@
                         </a>
                         <dl class="layui-nav-child">
                             <dd data-name="article" class="layui-this">
-                                <a lay-href="/articleUi">文章查询</a>
+                                <a lay-href="/admin/articleUi">文章查询</a>
                             </dd>
                             <dd data-name="article">
-                                <a lay-href="/articleUiAdd">添加文章</a>
+                                <a lay-href="/admin/articleUiAdd">添加文章</a>
                             </dd>
                         </dl>
                     </li>
@@ -76,7 +76,7 @@
                             <cite>留言管理</cite>
                         </a>
                         <dl class="layui-nav-child">
-                            <dd><a lay-href="/leacotsView">留言列表</a></dd>
+                            <dd><a lay-href="/admin/leacots/leacotsView">留言列表</a></dd>
                         </dl>
                     </li>
 
@@ -96,8 +96,9 @@
                             <cite>心理测评</cite>
                         </a>
                         <dl class="layui-nav-child">
-                            <dd><a lay-href="/topicView">测评题目查询</a></dd>
-                            <dd><a lay-href="/pgtestView">测评管理</a></dd>
+                            <dd><a lay-href="/admin/topic/topicView">测评题目查询</a></dd>
+<!--                            这里该没写-->
+                            <dd><a lay-href="/admin/pgtest/pgtestView">测评管理</a></dd>
                         </dl>
                     </li>
                     <li data-name="dialogue" class="layui-nav-item">
