--- a/src/main/resources/templates/views/admin/login.html
+++ b/src/main/resources/templates/views/admin/login.html
@@ -86,12 +86,20 @@
                 contentType: "application/json;charset=UTF-8",
                 success: function (result) {
                     if (result == 'success') {
-                        layer.msg('登入成功', {
+                        layer.msg('普通用户登入成功', {
                             offset: '15px'
                             , icon: 1
                             , time: 1500
                         }, function () {
                             location.href = '../'; //
+                        });
+                    } else if (result == 'adminsuccessls') {
+                        layer.msg('管理员登录成功！', {
+                            offset: '15px'
+                            , icon: 1
+                            , time: 1000
+                        }, function () {
+                            location.href = '/admin'; //
                         });
                     } else if (result == 'userNull') {
                         layer.msg('用户不存在！', {
