--- a/src/main/resources/templates/views/client/html/commons/bar.html
+++ b/src/main/resources/templates/views/client/html/commons/bar.html
@@ -18,8 +18,8 @@
     <div class="nav" style="color:#e3f6ff">
         <a style="font-size: 18px" href="/" th:href="@{/}">首页</a>
         <a style="font-size: 18px" href="/article/list" th:href="@{/article/list}">文章</a>
-        <a style="font-size: 18px" href="/pgtestUi" th:href="@{/pgtestUi}">心理评测</a>
-        <a style="font-size: 18px" href="/leacotsUi" th:href="@{/leacotsUi}">留言</a>
+        <a style="font-size: 18px" href="/pgtestUi" th:href="@{/pgtest/pgtestUi}">心理评测</a>
+        <a style="font-size: 18px" href="/leacotsUi" th:href="@{/leacots/leacotsUi}">留言</a>
         <a style="font-size: 18px" href="/noticeClientUi/list" th:href="@{/noticeClientUi/list}">公告</a>
         <a style="font-size: 18px" href="/user/register" th:href="@{/user/register}">注册</a>
         <a style="font-size: 18px" href="/user/cancel" th:href="@{/user/cancel}">注销</a>
@@ -27,7 +27,7 @@
     <ul class="layui-nav header-down-nav">
         <li style="font-size: 18px" class="layui-nav-item"><a href="/" th:href="@{/}">首页</a></li>
         <li style="font-size: 18px" class="layui-nav-item"><a href="/article/list" th:href="@{/article/list}">文章</a></li>
-        <li style="font-size: 18px" class="layui-nav-item"><a href="/pgtestUi" th:href="@{/pgtestUi}">心理评测</a></li>
+        <li style="font-size: 18px" class="layui-nav-item"><a href="/pgtest/pgtestUi" th:href="@{/pgtest/pgtestUi}">心理评测</a></li>
         <li style="font-size: 18px" class="layui-nav-item"><a href="/noticeClientUi/list" th:href="@{/noticeClientUi/list}">公告</a></li>
         <li style="font-size: 18px" class="layui-nav-item"><a href="/user/register" th:href="@{/user/register}">注册</a></li>
         <li style="font-size: 18px" class="layui-nav-item"><a href="/user/cancel" th:href="@{/user/cancel}">注销</a></li>
