--- a/src/main/resources/templates/views/admin/login.html
+++ b/src/main/resources/templates/views/admin/login.html
@@ -18,7 +18,7 @@
 
     <div class="layadmin-user-login-main">
         <div class="layadmin-user-login-box layadmin-user-login-header">
-            <h2>在线心理测评平台</h2>
+            <h2>在线测试平台</h2>
             <p></p>
             <p>请登入后使用</p>
         </div>
